--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ header {
 
 footer {
   text-align: center;
-  padding: 0.5rem;
+  padding: 1rem;
   font-family: "Josefin Sans", sans-serif;
 }
 
@@ -97,10 +97,14 @@ footer .product-container {
 footer .product-container div {
   flex: 1 1 200px;
 }
+.fake {
+  box-shadow: 0px 5px 5px grey;
+  padding-bottom: 1rem;
+  background-color: #cccccc;
+}
 
 footer img {
-  width: 100%;
-  box-shadow: 0px 5px 5px grey;
+  width: 85%;
 }
 
 footer .product-container div p {
