--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
   background-color: white;
   color: black;
 }
+
 header {
   padding-top: 2.5rem;
 }
@@ -97,7 +98,7 @@ footer .product-container {
 footer .product-container div {
   flex: 1 1 200px;
 }
-.fake {
+.footer-image {
   box-shadow: 0px 5px 5px grey;
   padding-bottom: 1rem;
   background-color: #cccccc;
