--- a/style.css
+++ b/style.css
@@ -3,24 +3,30 @@ body {
   color: #333;
   font-family: "Josefin sans", sans-serif;
   margin: 0;
+  padding: 0;
+}
+p {
+  font-weight: 300;
+}
+h2,
+h1 {
+  font-weight: 400;
 }
 .image-container {
   position: relative;
   display: inline-flex;
   max-width: 100%;
+  overflow: hidden;
 }
 .image-container img {
   width: 100%;
 }
 .overlay {
   position: absolute;
-  right: 12rem;
-  top: 13rem;
-  width: 40.125rem;
-  height: 22.125rem;
+  top: 20%;
+  right: 10%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: flex-end;
   color: white;
   text-align: end;
@@ -30,33 +36,27 @@ body {
   font-size: 4rem;
   margin-bottom: 1rem;
   padding-bottom: 2rem;
-  font-weight: 400;
 }
 .overlay span {
   margin-right: -1.5rem;
 }
 
 .overlay button {
-  background-color: transparent;
+  background: transparent;
   color: white;
   border: 2px solid white;
   padding: 16px 41px;
   font-size: 20px;
-  line-height: 14px;
   cursor: pointer;
   margin-right: -1.5rem;
 }
-
 .overlay button:hover {
   background-color: white;
   color: black;
 }
 
-header {
-  padding-top: 2.5rem;
-}
-
 .flex-container {
+  padding-top: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -71,13 +71,9 @@ header {
 
 .item p {
   font-size: 1.5rem;
-  font-weight: 300;
-  line-height: 4.125px;
   color: #000000;
-  padding-top: 1rem;
   margin-left: 1rem;
 }
-
 footer {
   text-align: center;
   padding: 1rem;
@@ -85,7 +81,6 @@ footer {
 }
 
 footer h1 {
-  font-weight: 400;
   font-size: 2.188rem;
   line-height: 4.125rem;
 }
@@ -112,5 +107,4 @@ footer .product-container div p {
   font-size: 1.5rem;
   line-height: 1.25rem;
   text-align: start;
-  font-weight: 300;
 }
